WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203090
FileSystemDirectoryReader / FileSystemEntry should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203090
Summary
FileSystemDirectoryReader / FileSystemEntry should not prevent entering the b...
Chris Dumez
Reported
2019-10-17 09:43:10 PDT
FileSystemDirectoryReader should not prevent entering the back/forward cache.
Attachments
Patch
(23.16 KB, patch)
2019-10-23 13:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(23.27 KB, patch)
2019-10-23 13:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(22.10 KB, patch)
2019-10-23 13:39 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-23 13:01:54 PDT
<
rdar://problem/56550805
>
Chris Dumez
Comment 2
2019-10-23 13:09:51 PDT
Created
attachment 381717
[details]
Patch
Chris Dumez
Comment 3
2019-10-23 13:17:24 PDT
Created
attachment 381720
[details]
Patch
Chris Dumez
Comment 4
2019-10-23 13:39:07 PDT
Created
attachment 381723
[details]
Patch
Geoffrey Garen
Comment 5
2019-10-23 14:09:35 PDT
Comment on
attachment 381723
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2019-10-23 16:25:38 PDT
Comment on
attachment 381723
[details]
Patch Clearing flags on attachment: 381723 Committed
r251509
: <
https://trac.webkit.org/changeset/251509
>
WebKit Commit Bot
Comment 7
2019-10-23 16:25:40 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 8
2019-10-24 12:03:10 PDT
The two new tests added in
https://trac.webkit.org/changeset/251509/webkit
are timing out on windows constantly and slowing down win EWS. History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=editing%2Fpasteboard%2Fentries-api%2FDirectoryEntry-getFile-back-forward-cache.html&test=editing%2Fpasteboard%2Fentries-api%2FDirectoryReader-readEntries-back-forward-cache.html
We missed this earlier due to Windows testing being broken yesterday.
Chris Dumez
Comment 9
2019-10-24 12:09:21 PDT
(In reply to Truitt Savell from
comment #8
)
> The two new tests added in
https://trac.webkit.org/changeset/251509/webkit
> are timing out on windows constantly and slowing down win EWS. > > History: >
https://results.webkit.org/?suite=layout-tests&suite=layout
- > tests&test=editing%2Fpasteboard%2Fentries-api%2FDirectoryEntry-getFile-back- > forward-cache.html&test=editing%2Fpasteboard%2Fentries-api%2FDirectoryReader- > readEntries-back-forward-cache.html > > We missed this earlier due to Windows testing being broken yesterday.
Fixed in <
https://trac.webkit.org/changeset/251550
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug