FileSystemDirectoryReader / FileSystemEntry should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203090 <rdar://problem/56550805>

Reviewed by Geoffrey Garen.

Source/WebCore:

FileSystemDirectoryReader / FileSystemEntry no longer prevent entering the back/forward cache.
We now dispatch tasks to the window event loop whenever we need to call a JS callback since the
window event loop takes care of suspending tasks while in the back/forward cache.

Tests: editing/pasteboard/entries-api/DirectoryEntry-getFile-back-forward-cache.html
       editing/pasteboard/entries-api/DirectoryReader-readEntries-back-forward-cache.html

* Modules/entriesapi/FileSystemDirectoryEntry.cpp:
(WebCore::FileSystemDirectoryEntry::getEntry):
* Modules/entriesapi/FileSystemDirectoryReader.cpp:
(WebCore::FileSystemDirectoryReader::document const):
(WebCore::FileSystemDirectoryReader::readEntries):
* Modules/entriesapi/FileSystemDirectoryReader.h:
* Modules/entriesapi/FileSystemEntry.cpp:
(WebCore::FileSystemEntry::document const):
(WebCore::FileSystemEntry::getParent):
* Modules/entriesapi/FileSystemEntry.h:
* Modules/entriesapi/FileSystemFileEntry.cpp:
(WebCore::FileSystemFileEntry::file):

LayoutTests:

Add layout test coverage.

* editing/pasteboard/entries-api/DirectoryEntry-getFile-back-forward-cache-expected.txt: Added.
* editing/pasteboard/entries-api/DirectoryEntry-getFile-back-forward-cache.html: Added.
* editing/pasteboard/entries-api/DirectoryReader-readEntries-back-forward-cache-expected.txt: Added.
* editing/pasteboard/entries-api/DirectoryReader-readEntries-back-forward-cache.html: Added.


Canonical link: https://commits.webkit.org/216744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251509 268f45cc-cd09-0410-ab3c-d52691b4dbfc