Source/WebCore/Modules/entriesapi/FileSystemEntry.cpp
@@ -32,6 +32,7 @@
 #include "FileSystemDirectoryEntry.h"
 #include "FileSystemEntryCallback.h"
 #include "ScriptExecutionContext.h"
+#include "WindowEventLoop.h"
 #include <wtf/FileSystem.h>
 #include <wtf/IsoMallocInlines.h>
 
@@ -60,10 +61,9 @@ const char* FileSystemEntry::activeDOMObjectName() const
     return "FileSystemEntry";
 }
 
-// FIXME: This should never prevent entering the back/forward cache.
-bool FileSystemEntry::shouldPreventEnteringBackForwardCache_DEPRECATED() const
+Document* FileSystemEntry::document() const
 {
-    return hasPendingActivity();
+    return downcast<Document>(scriptExecutionContext());
 }
 
 void FileSystemEntry::getParent(ScriptExecutionContext& context, RefPtr<FileSystemEntryCallback>&& successCallback, RefPtr<ErrorCallback>&& errorCallback)
@@ -71,14 +71,20 @@ void FileSystemEntry::getParent(ScriptExecutionContext& context, RefPtr<FileSyst
     if (!successCallback && !errorCallback)
         return;
 
-    filesystem().getParent(context, *this, [pendingActivity = makePendingActivity(*this), successCallback = WTFMove(successCallback), errorCallback = WTFMove(errorCallback)](auto&& result) {
-        if (result.hasException()) {
-            if (errorCallback)
-                errorCallback->handleEvent(DOMException::create(result.releaseException()));
+    filesystem().getParent(context, *this, [this, pendingActivity = makePendingActivity(*this), successCallback = WTFMove(successCallback), errorCallback = WTFMove(errorCallback)](auto&& result) mutable {
+        auto* document = this->document();
+        if (!document)
             return;
-        }
-        if (successCallback)
-            successCallback->handleEvent(result.releaseReturnValue());
+
+        document->eventLoop().queueTask(TaskSource::Networking, *document, [successCallback = WTFMove(successCallback), errorCallback = WTFMove(errorCallback), result = WTFMove(result), pendingActivity = WTFMove(pendingActivity)]() mutable {
+            if (result.hasException()) {
+                if (errorCallback)
+                    errorCallback->handleEvent(DOMException::create(result.releaseException()));
+                return;
+            }
+            if (successCallback)
+                successCallback->handleEvent(result.releaseReturnValue());
+        });
     });
 }
 
