Source/WebCore/Modules/entriesapi/FileSystemEntry.h
@@ -52,10 +52,10 @@ public:
 
 protected:
     FileSystemEntry(ScriptExecutionContext&, DOMFileSystem&, const String& virtualPath);
+    Document* document() const;
 
 private:
     const char* activeDOMObjectName() const final;
-    bool shouldPreventEnteringBackForwardCache_DEPRECATED() const final;
 
     Ref<DOMFileSystem> m_filesystem;
     String m_name;
